syntax = "proto3";

package pbcommon;

enum UserStatus {
  NotLogin = 0;    // 没有登陆 没有使用
  InHall = 1;      // 在大厅 没有使用
  InMatching = 2;  // 匹配中
  InGameing = 3;   // 游戏中
}

// 断开提示 s -> c
message BrokenTip {
  string Msg = 1;
  // 异地登陆 1 其他*
  uint32 Code = 2;
}

// 错误提示 s -> c
message ErrorTip {
  string Msg = 1;
}

message SiteDownPlayerInfo {
  uint64 UserID = 1;
  int32 Dir = 2;
  string Name = 3;
  string Profile = 4;
}

//桌子类型
enum DeskType {
  DTNone = 0;
  DTMatch = 1;   //匹配
  DTFriend = 2;  // 好友、俱乐部
  DTLadder = 3;  // 比赛
}

// 桌子信息
message DeskInfo {
  uint64 Uuid = 1;               // 版本号
  uint64 ID = 2;                 // 桌子ID
  uint64 CreateUserID = 3;       // 创建人 0表示系统创建
  string CreateUserName = 4;     //创建人名字
  string CreateUserProfile = 5;  //创建人头像
  int64 CreateTime = 6;          //创建时间
  int64 CreateFee = 7;           // 费用 创建时预扣的
  string ArgName = 8;    // 桌子参数名称 如 pbgame_mj_changshu.DeskArg
  bytes ArgValue = 9;    //桌子参数
  string Status = 10;    // 1 等待中 2 开始了
  string GameName = 11;  //游戏id
  string GameID = 12;    //游戏ip+port
  int64 ClubID = 13;     // 所属俱乐部
  DeskType Kind = 14;    // 桌子类型 1匹配 2好友
  repeated SiteDownPlayerInfo SdInfos = 15;  // 桌子中坐下的玩家
  int64 TotalLoop = 16;                      // 总局数
  int64 CurrLoop = 17;                       // 当前局数
  uint64 CreateVlaueHash = 18;               //建房参数hash值
}

// 会话信息
message SessionInfo {
  uint64 Uuid = 1;
  uint64 UserID = 2;
  string SessionID = 3;
  UserStatus Status = 4;
  uint64 AtDeskID = 5;
  string GameName = 6;
  string GameID = 7;
  int64 LastActiveTime = 8;
  uint32 RoomID = 9;
}

// 用户信息
message UserInfo {
  uint64 UserID = 1;
  string SessionID = 2;
  string WxID = 3;  // 微信id
  double Longitude = 4;
  double Latitude = 5;
  string Name = 6;  // 昵称
  string Sex = 7;
  string Profile = 8;
  int64 RegisterTime = 9;
  string Mobile = 10;
  string XLID = 11;
  uint64 Gold = 12;              // 金币
  uint64 Masonry = 13;           // 砖石
  uint64 GoldPre = 14;           // 预扣金币
  uint64 MasonryPre = 15;        // 预扣砖石
  string Agent = 16;             // 所属代理
  string IdentityCard = 17;      // 身份证号码
  string IdentityCardName = 18;  // 身份证名称
  string Password = 19;          // 手机登陆密码
  string IP = 20;
  int32 PlayCount = 21;        // 局数
  int32 BindMobileCount = 22;  // 绑定手机次数，第一次绑定有赠送
  string Place = 23;           // 通过IP或者经纬度得到的位置名称
  bool IsRedName = 24;         // 是否是红名用户
  uint64 TotalCase = 25;       // 用户参于游戏次数
  uint64 WinCaseCase = 26;     // 用户参于游戏赢的次数
}